asparagramParser.py
# Generated from asparagram.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class asparagramParser ( Parser ):

    grammarFileName = "asparagram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'call'", "'set'", "'place'", "'relative'", 
                     "'object'", "'dynamic'", "'connected'", "'rectangular'", 
                     "'polar'", "'is'", "'to'", "'at'", "'end'", "'$'", 
                     "'='", "'('", "')'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "TKCALL", "TKSET", "TKPLC", "TKREL", 
                      "TKOBJ", "TKDYN", "TKCONN", "TKRECT", "TKPOL", "TKIS", 
                      "TKTO", "TKAT", "TKEND", "TKLEAD", "TKEQ", "TKLPAR", 
                      "TKRPAR", "TKCOM", "TKDOT", "TKNUM", "TKID", "TKEXPR", 
                      "TKWS" ]

    RULE_rlRoot = 0
    RULE_rlStmt = 1
    RULE_rlObjStmt = 2
    RULE_rlDynStmt = 3
    RULE_rlObjStmts = 4
    RULE_rlDynStmts = 5
    RULE_rlCallStmt = 6
    RULE_rlSetStmt = 7
    RULE_rlPlaceStmt = 8
    RULE_rlPos = 9
    RULE_rlNPropList = 10
    RULE_rlProperty = 11
    RULE_rlValue = 12
    RULE_rlConnection = 13
    RULE_rlRef = 14
    RULE_rlOff = 15

    ruleNames =  [ "rlRoot", "rlStmt", "rlObjStmt", "rlDynStmt", "rlObjStmts", 
                   "rlDynStmts", "rlCallStmt", "rlSetStmt", "rlPlaceStmt", 
                   "rlPos", "rlNPropList", "rlProperty", "rlValue", "rlConnection", 
                   "rlRef", "rlOff" ]

    EOF = Token.EOF
    TKCALL=1
    TKSET=2
    TKPLC=3
    TKREL=4
    TKOBJ=5
    TKDYN=6
    TKCONN=7
    TKRECT=8
    TKPOL=9
    TKIS=10
    TKTO=11
    TKAT=12
    TKEND=13
    TKLEAD=14
    TKEQ=15
    TKLPAR=16
    TKRPAR=17
    TKCOM=18
    TKDOT=19
    TKNUM=20
    TKID=21
    TKEXPR=22
    TKWS=23

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RlRootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rlStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asparagramParser.RlStmtContext)
            else:
                return self.getTypedRuleContext(asparagramParser.RlStmtContext,i)


        def getRuleIndex(self):
            return asparagramParser.RULE_rlRoot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlRoot" ):
                listener.enterRlRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlRoot" ):
                listener.exitRlRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlRoot" ):
                return visitor.visitRlRoot(self)
            else:
                return visitor.visitChildren(self)




    def rlRoot(self):

        localctx = asparagramParser.RlRootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_rlRoot)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==asparagramParser.TKOBJ or _la==asparagramParser.TKDYN:
                self.state = 32
                self.rlStmt()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rlObjStmt(self):
            return self.getTypedRuleContext(asparagramParser.RlObjStmtContext,0)


        def rlDynStmt(self):
            return self.getTypedRuleContext(asparagramParser.RlDynStmtContext,0)


        def getRuleIndex(self):
            return asparagramParser.RULE_rlStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlStmt" ):
                listener.enterRlStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlStmt" ):
                listener.exitRlStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlStmt" ):
                return visitor.visitRlStmt(self)
            else:
                return visitor.visitChildren(self)




    def rlStmt(self):

        localctx = asparagramParser.RlStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rlStmt)
        try:
            self.state = 40
            token = self._input.LA(1)
            if token in [asparagramParser.TKOBJ]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.rlObjStmt()

            elif token in [asparagramParser.TKDYN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.rlDynStmt()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlObjStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKOBJ(self):
            return self.getToken(asparagramParser.TKOBJ, 0)

        def TKID(self, i:int=None):
            if i is None:
                return self.getTokens(asparagramParser.TKID)
            else:
                return self.getToken(asparagramParser.TKID, i)

        def TKAT(self):
            return self.getToken(asparagramParser.TKAT, 0)

        def TKLPAR(self, i:int=None):
            if i is None:
                return self.getTokens(asparagramParser.TKLPAR)
            else:
                return self.getToken(asparagramParser.TKLPAR, i)

        def rlPos(self):
            return self.getTypedRuleContext(asparagramParser.RlPosContext,0)


        def TKRPAR(self, i:int=None):
            if i is None:
                return self.getTokens(asparagramParser.TKRPAR)
            else:
                return self.getToken(asparagramParser.TKRPAR, i)

        def TKIS(self):
            return self.getToken(asparagramParser.TKIS, 0)

        def TKEND(self):
            return self.getToken(asparagramParser.TKEND, 0)

        def rlNPropList(self):
            return self.getTypedRuleContext(asparagramParser.RlNPropListContext,0)


        def rlObjStmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asparagramParser.RlObjStmtsContext)
            else:
                return self.getTypedRuleContext(asparagramParser.RlObjStmtsContext,i)


        def getRuleIndex(self):
            return asparagramParser.RULE_rlObjStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlObjStmt" ):
                listener.enterRlObjStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlObjStmt" ):
                listener.exitRlObjStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlObjStmt" ):
                return visitor.visitRlObjStmt(self)
            else:
                return visitor.visitChildren(self)




    def rlObjStmt(self):

        localctx = asparagramParser.RlObjStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rlObjStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(asparagramParser.TKOBJ)
            self.state = 43
            self.match(asparagramParser.TKID)
            self.state = 44
            self.match(asparagramParser.TKAT)
            self.state = 45
            self.match(asparagramParser.TKLPAR)
            self.state = 46
            self.rlPos()
            self.state = 47
            self.match(asparagramParser.TKRPAR)
            self.state = 48
            self.match(asparagramParser.TKIS)
            self.state = 49
            self.match(asparagramParser.TKID)
            self.state = 54
            _la = self._input.LA(1)
            if _la==asparagramParser.TKLPAR:
                self.state = 50
                self.match(asparagramParser.TKLPAR)
                self.state = 51
                self.rlNPropList()
                self.state = 52
                self.match(asparagramParser.TKRPAR)


            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << asparagramParser.TKCALL) | (1 << asparagramParser.TKSET) | (1 << asparagramParser.TKPLC))) != 0):
                self.state = 56
                self.rlObjStmts()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(asparagramParser.TKEND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlDynStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKDYN(self):
            return self.getToken(asparagramParser.TKDYN, 0)

        def TKID(self, i:int=None):
            if i is None:
                return self.getTokens(asparagramParser.TKID)
            else:
                return self.getToken(asparagramParser.TKID, i)

        def TKIS(self):
            return self.getToken(asparagramParser.TKIS, 0)

        def TKEND(self):
            return self.getToken(asparagramParser.TKEND, 0)

        def rlConnection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asparagramParser.RlConnectionContext)
            else:
                return self.getTypedRuleContext(asparagramParser.RlConnectionContext,i)


        def rlDynStmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asparagramParser.RlDynStmtsContext)
            else:
                return self.getTypedRuleContext(asparagramParser.RlDynStmtsContext,i)


        def getRuleIndex(self):
            return asparagramParser.RULE_rlDynStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlDynStmt" ):
                listener.enterRlDynStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlDynStmt" ):
                listener.exitRlDynStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlDynStmt" ):
                return visitor.visitRlDynStmt(self)
            else:
                return visitor.visitChildren(self)




    def rlDynStmt(self):

        localctx = asparagramParser.RlDynStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rlDynStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(asparagramParser.TKDYN)
            self.state = 65
            self.match(asparagramParser.TKID)
            self.state = 66
            self.match(asparagramParser.TKIS)
            self.state = 67
            self.match(asparagramParser.TKID)
            self.state = 69 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 68
                self.rlConnection()
                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==asparagramParser.TKCONN):
                    break

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==asparagramParser.TKCALL or _la==asparagramParser.TKSET:
                self.state = 73
                self.rlDynStmts()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(asparagramParser.TKEND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlObjStmtsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rlCallStmt(self):
            return self.getTypedRuleContext(asparagramParser.RlCallStmtContext,0)


        def rlSetStmt(self):
            return self.getTypedRuleContext(asparagramParser.RlSetStmtContext,0)


        def rlPlaceStmt(self):
            return self.getTypedRuleContext(asparagramParser.RlPlaceStmtContext,0)


        def getRuleIndex(self):
            return asparagramParser.RULE_rlObjStmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlObjStmts" ):
                listener.enterRlObjStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlObjStmts" ):
                listener.exitRlObjStmts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlObjStmts" ):
                return visitor.visitRlObjStmts(self)
            else:
                return visitor.visitChildren(self)




    def rlObjStmts(self):

        localctx = asparagramParser.RlObjStmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rlObjStmts)
        try:
            self.state = 84
            token = self._input.LA(1)
            if token in [asparagramParser.TKCALL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.rlCallStmt()

            elif token in [asparagramParser.TKSET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.rlSetStmt()

            elif token in [asparagramParser.TKPLC]:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.rlPlaceStmt()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlDynStmtsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rlCallStmt(self):
            return self.getTypedRuleContext(asparagramParser.RlCallStmtContext,0)


        def rlSetStmt(self):
            return self.getTypedRuleContext(asparagramParser.RlSetStmtContext,0)


        def getRuleIndex(self):
            return asparagramParser.RULE_rlDynStmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlDynStmts" ):
                listener.enterRlDynStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlDynStmts" ):
                listener.exitRlDynStmts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlDynStmts" ):
                return visitor.visitRlDynStmts(self)
            else:
                return visitor.visitChildren(self)




    def rlDynStmts(self):

        localctx = asparagramParser.RlDynStmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rlDynStmts)
        try:
            self.state = 88
            token = self._input.LA(1)
            if token in [asparagramParser.TKCALL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.rlCallStmt()

            elif token in [asparagramParser.TKSET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.rlSetStmt()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlCallStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKCALL(self):
            return self.getToken(asparagramParser.TKCALL, 0)

        def rlProperty(self):
            return self.getTypedRuleContext(asparagramParser.RlPropertyContext,0)


        def TKID(self):
            return self.getToken(asparagramParser.TKID, 0)

        def getRuleIndex(self):
            return asparagramParser.RULE_rlCallStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlCallStmt" ):
                listener.enterRlCallStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlCallStmt" ):
                listener.exitRlCallStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlCallStmt" ):
                return visitor.visitRlCallStmt(self)
            else:
                return visitor.visitChildren(self)




    def rlCallStmt(self):

        localctx = asparagramParser.RlCallStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_rlCallStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(asparagramParser.TKCALL)
            self.state = 91
            self.rlProperty()
            self.state = 92
            self.match(asparagramParser.TKID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlSetStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKSET(self):
            return self.getToken(asparagramParser.TKSET, 0)

        def rlProperty(self):
            return self.getTypedRuleContext(asparagramParser.RlPropertyContext,0)


        def rlValue(self):
            return self.getTypedRuleContext(asparagramParser.RlValueContext,0)


        def getRuleIndex(self):
            return asparagramParser.RULE_rlSetStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlSetStmt" ):
                listener.enterRlSetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlSetStmt" ):
                listener.exitRlSetStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlSetStmt" ):
                return visitor.visitRlSetStmt(self)
            else:
                return visitor.visitChildren(self)




    def rlSetStmt(self):

        localctx = asparagramParser.RlSetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rlSetStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(asparagramParser.TKSET)
            self.state = 95
            self.rlProperty()
            self.state = 96
            self.rlValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlPlaceStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKPLC(self):
            return self.getToken(asparagramParser.TKPLC, 0)

        def rlProperty(self):
            return self.getTypedRuleContext(asparagramParser.RlPropertyContext,0)


        def TKAT(self):
            return self.getToken(asparagramParser.TKAT, 0)

        def rlValue(self):
            return self.getTypedRuleContext(asparagramParser.RlValueContext,0)


        def TKREL(self):
            return self.getToken(asparagramParser.TKREL, 0)

        def TKTO(self):
            return self.getToken(asparagramParser.TKTO, 0)

        def TKID(self):
            return self.getToken(asparagramParser.TKID, 0)

        def getRuleIndex(self):
            return asparagramParser.RULE_rlPlaceStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlPlaceStmt" ):
                listener.enterRlPlaceStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlPlaceStmt" ):
                listener.exitRlPlaceStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlPlaceStmt" ):
                return visitor.visitRlPlaceStmt(self)
            else:
                return visitor.visitChildren(self)




    def rlPlaceStmt(self):

        localctx = asparagramParser.RlPlaceStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rlPlaceStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(asparagramParser.TKPLC)
            self.state = 99
            self.rlProperty()
            self.state = 100
            self.match(asparagramParser.TKAT)
            self.state = 101
            self.rlValue()
            self.state = 102
            self.match(asparagramParser.TKREL)
            self.state = 103
            self.match(asparagramParser.TKTO)
            self.state = 104
            self.match(asparagramParser.TKID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlPosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKNUM(self, i:int=None):
            if i is None:
                return self.getTokens(asparagramParser.TKNUM)
            else:
                return self.getToken(asparagramParser.TKNUM, i)

        def TKCOM(self, i:int=None):
            if i is None:
                return self.getTokens(asparagramParser.TKCOM)
            else:
                return self.getToken(asparagramParser.TKCOM, i)

        def getRuleIndex(self):
            return asparagramParser.RULE_rlPos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlPos" ):
                listener.enterRlPos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlPos" ):
                listener.exitRlPos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlPos" ):
                return visitor.visitRlPos(self)
            else:
                return visitor.visitChildren(self)




    def rlPos(self):

        localctx = asparagramParser.RlPosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_rlPos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(asparagramParser.TKNUM)
            self.state = 107
            self.match(asparagramParser.TKCOM)
            self.state = 108
            self.match(asparagramParser.TKNUM)
            self.state = 109
            self.match(asparagramParser.TKCOM)
            self.state = 110
            self.match(asparagramParser.TKNUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlNPropListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rlProperty(self):
            return self.getTypedRuleContext(asparagramParser.RlPropertyContext,0)


        def TKEQ(self):
            return self.getToken(asparagramParser.TKEQ, 0)

        def TKNUM(self):
            return self.getToken(asparagramParser.TKNUM, 0)

        def TKCOM(self):
            return self.getToken(asparagramParser.TKCOM, 0)

        def rlNPropList(self):
            return self.getTypedRuleContext(asparagramParser.RlNPropListContext,0)


        def getRuleIndex(self):
            return asparagramParser.RULE_rlNPropList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlNPropList" ):
                listener.enterRlNPropList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlNPropList" ):
                listener.exitRlNPropList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlNPropList" ):
                return visitor.visitRlNPropList(self)
            else:
                return visitor.visitChildren(self)




    def rlNPropList(self):

        localctx = asparagramParser.RlNPropListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_rlNPropList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.rlProperty()
            self.state = 113
            self.match(asparagramParser.TKEQ)
            self.state = 114
            self.match(asparagramParser.TKNUM)
            self.state = 117
            _la = self._input.LA(1)
            if _la==asparagramParser.TKCOM:
                self.state = 115
                self.match(asparagramParser.TKCOM)
                self.state = 116
                self.rlNPropList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlPropertyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKID(self, i:int=None):
            if i is None:
                return self.getTokens(asparagramParser.TKID)
            else:
                return self.getToken(asparagramParser.TKID, i)

        def TKLEAD(self):
            return self.getToken(asparagramParser.TKLEAD, 0)

        def TKDOT(self, i:int=None):
            if i is None:
                return self.getTokens(asparagramParser.TKDOT)
            else:
                return self.getToken(asparagramParser.TKDOT, i)

        def getRuleIndex(self):
            return asparagramParser.RULE_rlProperty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlProperty" ):
                listener.enterRlProperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlProperty" ):
                listener.exitRlProperty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlProperty" ):
                return visitor.visitRlProperty(self)
            else:
                return visitor.visitChildren(self)




    def rlProperty(self):

        localctx = asparagramParser.RlPropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_rlProperty)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            _la = self._input.LA(1)
            if not(_la==asparagramParser.TKLEAD or _la==asparagramParser.TKID):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==asparagramParser.TKDOT:
                self.state = 120
                self.match(asparagramParser.TKDOT)
                self.state = 121
                self.match(asparagramParser.TKID)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKID(self):
            return self.getToken(asparagramParser.TKID, 0)

        def TKEXPR(self):
            return self.getToken(asparagramParser.TKEXPR, 0)

        def TKNUM(self):
            return self.getToken(asparagramParser.TKNUM, 0)

        def getRuleIndex(self):
            return asparagramParser.RULE_rlValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlValue" ):
                listener.enterRlValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlValue" ):
                listener.exitRlValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRlValue" ):
                return visitor.visitRlValue(self)
            else:
                return visitor.visitChildren(self)




    def rlValue(self):

        localctx = asparagramParser.RlValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_rlValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << asparagramParser.TKNUM) | (1 << asparagramParser.TKID) | (1 << asparagramParser.TKEXPR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlConnectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKCONN(self):
            return self.getToken(asparagramParser.TKCONN, 0)

        def TKTO(self):
            return self.getToken(asparagramParser.TKTO, 0)

        def TKID(self):
            return self.getToken(asparagramParser.TKID, 0)

        def TKAT(self):
            return self.getToken(asparagramParser.TKAT, 0)

        def rlRef(self):
            return self.getTypedRuleContext(asparagramParser.RlRefContext,0)


        def TKLPAR(self):
            return self.getToken(asparagramParser.TKLPAR, 0)

        def rlOff(self):
            return self.getTypedRuleContext(asparagramParser.RlOffContext,0)


        def TKRPAR(self):
            return self.getToken(asparagramParser.TKRPAR, 0)

        def getRuleIndex(self):
            return asparagramParser.RULE_rlConnection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRlConnection" ):
                listener.enterRlConnection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRlConnection" ):
                listener.exitRlConnection(self)
